# Lobot

./: .gitignore  LICENSE  README.md  go.mod  go.sum
cmd/lobot/: main.go
internal/filters/: name.go  namespace.go
internal/graph/: argocd.go  builder.go  graph.go  helm.go
internal/helm/: client.go
internal/helmutil/: decoder.go
internal/k8s/: argocd_integration.go  argocd_types.go  client.go  discovery.go  editor.go  helm_integration.go  informer.go  metrics.go  resource_service.go  tracked_object.go
internal/splash/: splash.go
internal/ui/: colors.go  errors.go  graph_canvas.go  graph_layout.go  graph_visualizer.go  keymap.go  modal.go  model.go  selector.go  styles.go  tree_visualizer.go  update.go  utilization_dashboard.go  view.go  viewport2d.go  visualizer.go
internal/util/: strings.go
led-matrix-ticker/: .gitignore  README.md  pyproject.toml
led-matrix-ticker/src/: __init__.py  config.py  display_backend.py  hardware_backend.py
led-matrix-ticker/src/examples/: __init__.py  demo_basic.py  demo_info_display.py  demo_text.py
